[tool.poetry]
name = "image-processing-toolkit"
version = "0.1.0"
description = ""
authors = ["Ankush Patel <ap@ankushp.com>"]
readme = "README.md"
packages = [{include = "image_processing_toolkit"}]

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^1.26.4"
opencv-python = "^4.9.0.80"
matplotlib = "^3.8.3"

[tool.poetry.group.dev.dependencies]
ruff = "^0.3.2"
pytest = "^8.1.1"
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
